Project -> Case string change

--- a/lib/tasks/litvault/liquid_views/dashboard--company--analytics--show.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard--company--analytics--show.liquid
@@ -29,7 +29,7 @@ partial: false
           <thead>
             <tr>
               <th>{{ 'dashboard.analytics.columns.amount') | t }}</th>
-              <th>Project</th>
+              <th>Case</th>
               <th>{{ 'dashboard.analytics.columns.date' | t }}</th>
             </tr>
           </thead>
