--- a/lib/tasks/litvault/liquid_views/dashboard--company--transactables--client_actions.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard--company--transactables--client_actions.liquid
@@ -1,11 +1,11 @@
 <ul class="actions-a">
 
   {% if current_status != 'archived' %}
-    <li><a href="{{ transactable.show_path }}" class="btn btn-default">Project Details</a></li>
+    <li><a href="{{ transactable.show_path }}" class="btn btn-default">Case Details</a></li>
   {% endif %}
 
   {% if current_status == 'pending' %}
-    <li><a href='{{ transactable.edit_path }}' class="btn btn-primary">Edit Project</a></li>
+    <li><a href='{{ transactable.edit_path }}' class="btn btn-primary">Edit Case</a></li>
   {% endif %}
 
   {% if transactable.pending? == false and accepted_order != blank %}
@@ -13,11 +13,11 @@
   {% endif %}
 
   {% if current_status == 'in progress' %}
-    <li><a href="{{ accepted_order.complete_path }}" data-method="post" class="btn btn-success" data-confirm="Are you sure you want to mark this project as completed?">Mark Project as Completed</a></li>
+    <li><a href="{{ accepted_order.complete_path }}" data-method="post" class="btn btn-success" data-confirm="Are you sure you want to mark this case as completed?">Mark Case as Completed</a></li>
   {% endif %}
 
   {% if current_status != 'archived' %}
-    <li><a href='{{ transactable.cancel_path | append: "?status=" | append: current_status }}' data-confirm="Are you sure you want to cancel this project?" class="btn btn-danger">Cancel Project</a></li>
+    <li><a href='{{ transactable.cancel_path | append: "?status=" | append: current_status }}' data-confirm="Are you sure you want to cancel this case?" class="btn btn-danger">Cancel Case</a></li>
   {% endif %}
 
   {% if current_status == 'in progress' %}
