--- a/lib/tasks/litvault/liquid_views/listings--show--actual.liquid
+++ b/lib/tasks/litvault/liquid_views/listings--show--actual.liquid
@@ -4,7 +4,7 @@
 <main id="main">
     <div class="wrapper-a">
         <div class="back-to-search-results back-to-listings">
-            <a href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: listing.transactable_type.slug }}">Back to My Projects</a>
+            <a href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: listing.transactable_type.slug }}">Back to My Cases</a>
         </div>
 
         <article class="listing-a">
@@ -13,16 +13,16 @@
             <div class="content">
                 <div class="listing-properties">
                     <div class="overview">
-                        {% if listing.properties.project_contact != blank %}
+                        {% if listing.properties.case_contact != blank %}
                         <h2>Contact Name:
-                            <span>{{ listing.properties.project_contact }}</span>
+                            <span>{{ listing.properties.case_contact }}</span>
                             {% if listing.creator.seller_properties['linkedin_url'] != blank %}
                             | <a href="{{ listing.creator.seller_properties['linkedin_url'] }}" rel="external" class="linkedin">LinkedIn Bio</a>
                             {% endif %}
                         </h2>
                         {% endif %}
                         <div class="meta">
-                            Project posted <b>{{ listing.created_at | time_ago_in_words }}</b> ago
+                            Case posted <b>{{ listing.created_at | time_ago_in_words }}</b> ago
                         </div>
                     </div>
 
@@ -135,8 +135,8 @@
                 <hr>
 
                 <ul class="company-properties">
-                  <li><b>{{ listing.creator.transactables_count }}</b> Projects Posted</li>
-                  <li><b>{{ listing.creator.completed_transactables_count }}</b> Projects Completed</li>
+                  <li><b>{{ listing.creator.transactables_count }}</b> Cases Posted</li>
+                  <li><b>{{ listing.creator.completed_transactables_count }}</b> Cases Completed</li>
                     <li>Member Since {{ listing.creator.created_at | to_date | l: 'short' }}</li>
                 </ul>
 
