--- a/lib/tasks/litvault/liquid_views/listings--show.liquid
+++ b/lib/tasks/litvault/liquid_views/listings--show.liquid
@@ -6,7 +6,7 @@ partial: false
 {% else %}
   {% assign collaborator = current_user | find_collaborator: listing %}
   {% if collaborator.approved_by_owner? or current_user.id == listing.creator_id %}
-    {% include 'listings/case_details.html' %}
+    {% include 'listings/show/actual.html' %}
   {% else %}
     {% include 'listings/ask_for_permission.html', collaborator: collaborator %}
   {% endif %}
