UOT-45 fixing emails

--- a/app/views/transactable_mailer/collaborator_approved.html.liquid
+++ b/app/views/transactable_mailer/collaborator_approved.html.liquid
@@ -1,3 +1,3 @@
-<h1>Hi {{ user.first_name }},</h1>
+<h1>Hi {{ enquirer.first_name }},</h1>
 <p><a href="{{ owner.profile_url }}">{{ owner.name }}</a> has approved you as a collaborator on <a href="{{ transactable.listing_url }}">{{ transactable.name }}</a>.</p>
 <p>Don't forget to follow the project to stay up-to-date with the latest developments.</p>
