--- a/app/views/transactable_mailer/collaborator_has_quit.html.liquid
+++ b/app/views/transactable_mailer/collaborator_has_quit.html.liquid
@@ -2,5 +2,5 @@
 
 <p>thank you so much for inviting me to your project. However, I am not available for this opportunity at this time.</p>
 <p>
-  <a href="{{ user.profile_url }}">{{ user.first_name }}</a>
+  <a href="{{ enquirer.profile_url }}">{{ enquirer.first_name }}</a>
 </p>
