--- a/app/views/transactable_mailer/collaborator_has_quit.text.liquid
+++ b/app/views/transactable_mailer/collaborator_has_quit.text.liquid
@@ -2,4 +2,4 @@ Hi, {{ owner.first_name }}
 
 thank you so much for inviting me to your project. However, I am not available for this opportunity at this time.
 
-{{ user.first_name }} {{ user.profile_url }}
+{{ enquirer.first_name }} {{ enquirer.profile_url }}
