--- a/app/views/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
+++ b/app/views/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
@@ -1,4 +1,4 @@
-<h1>Hi {{ user.first_name }},</h1>
+<h1>Hi {{ enquirer.first_name }},</h1>
 
 <p>
   <a href="{{ owner.profile_url }}">{{ owner.name }}</a>  has invited you to become
@@ -6,5 +6,5 @@
   Learn more about the listing.
 </p>
 
-<p><a href="{{ user.profile_url }}#transactables" >Accept | Decline invitation</a></p>
+<p><a href="{{ enquirer.profile_url }}#transactables" >Accept | Decline invitation</a></p>
 
