--- a/app/views/transactable_mailer/transactable_owner_added_collaborator_email.text.liquid
+++ b/app/views/transactable_mailer/transactable_owner_added_collaborator_email.text.liquid
@@ -1,7 +1,7 @@
-Hi {{ user.first_name }},
+Hi {{ enquirer.first_name }},
 
 {{ owner.name }} ({{ owner.profile_url }})  has invited you to become a collaborator on {{ transactable.name }} ({{ transactable.listing_url }}).
 Learn more about the listing.
 
-Accept | Decline invitation ({{ user.profile_url }}#transactables)
+Accept | Decline invitation ({{ enquirer.profile_url }}#transactables)
 
