--- a/app/views/transactable_mailer/collaborator_declined.html.liquid
+++ b/app/views/transactable_mailer/collaborator_declined.html.liquid
@@ -1,4 +1,4 @@
-<h1>Hi {{ user.first_name }},</h1>
+<h1>Hi {{ enquirer.first_name }},</h1>
 
 <p><a href="{{ owner.profile_url }}">{{ owner.name }}</a> has declined your request to collaborate on <a href="{{ transactable.listing_url }}">{{ transactable.name }}</a>, but thank you for your offer.</p>
 <p>You're welcome to follow the project and keep track of new developments.</p>
