--- a/app/frontend/stylesheets/instance_admin/_variables.scss
+++ b/app/frontend/stylesheets/instance_admin/_variables.scss
@@ -12,6 +12,9 @@ $highlight_color:           #2F7FBE;
 $form_field_outline_color:  #DEDFDF;
 $error_color:               #b94a48;
 
+// Glyphicons
+$icon-font-path: "/assets/" !default;
+
 // Typography
 $light_text_color:          #A9ABAE;
 $dark_text_color:           #3B3B3B;
