--- a/app/frontend/stylesheets/components/_booking_module.scss
+++ b/app/frontend/stylesheets/components/_booking_module.scss
@@ -43,6 +43,17 @@
 
   .booking-body {
     display: block;
+
+    .booking-message {
+      padding: 20px;
+
+      p {
+        color: #000;
+        font-size: 13pt;
+        text-align: center;
+        margin: 0;
+      }
+    }
   }
 
   .ico-chevron-right {
