--- a/app/views/registrations/blog/_header.html.liquid
+++ b/app/views/registrations/blog/_header.html.liquid
@@ -1,6 +1,11 @@
 {% assign displayed_title = false %}
+
+{% if @user.blog.header_image_present? %}
+  {% capture header_image %} style="background-image: url({{ @user.blog.header_image_url }});"{% endcapture %}
+{% endif %}
+
 <div class="header">
-  <div class='header-text-and-logo' style='background-image: url({{ @user.blog.header_image_url }});'>
+  <div class='header-text-and-logo'{{ header_image }}>
     <div class="v-wrap">
       <div class="v-box">
         <a href='{{@user.user_blog_posts_list_path}}' >
