NM-5789 Fixed default <em> style (#4332)

--- a/app/views/dynamic_themes/application.css.erb
+++ b/app/views/dynamic_themes/application.css.erb
@@ -318,7 +318,9 @@ p,
 ul,
 ol,
 em {
-    font: 18px/28px <%= font[:regular] %>
+    font-size: 18px;
+    line-height: 28px;
+    font-family: <%= font[:regular] %>;
 }
 h1,
 h1 a,
