--- a/lib/tasks/litvault/liquid_views/registrations--show.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations--show.liquid
@@ -162,7 +162,7 @@ partial: false
             <aside class="sidebar">
                 <ul class="actions-a">
                     {% if current_user != blank and current_user.has_seller_profile? %}
-                        <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
+                        <li><a href="#case-invite-{{ user.id }}" class="button-a" data-case-invite-trigger>Invite to case</a></li>
                     {% endif %}
                     <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
                     {% if user.has_active_blog? %}
@@ -207,6 +207,6 @@ partial: false
             </aside>
         </article>
 
-        <div class="project-invite" id="project-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
+        <div class="case-invite" id="case-invite-{{ user.id }}" data-collaborations-url="{{ 'collaborations_for_current_user_dashboard_company_user_path' | generate_url: user.id }}"></div>
     </div>
 </main>
