--- a/lib/tasks/litvault/liquid_views/dashboard--company--transactables--index.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard--company--transactables--index.liquid
@@ -35,35 +35,37 @@ partial: false
 
 {% assign form_url = transactable_type.transactable_types_path %}
 
-<div class="sort-filter-search-wrapper">
-    <div class="sort-filter-a">
-      {% form_for :transactable, url: @form_url, method: 'get', form_for_type: 'dashboard' %}
-        <input type="hidden" name="status" value="{{ current_status }}">
-        <div class="form-group">
-          <label for="filter-properties-workplace" class="control-label">Workplace</label>
-          <select id="filter-properties-workplace" name="filter[properties][workplace_type]" data-allow-empty-option="true">
-            <option value="">Any</option>
-            <option value="Online" {% if params.filter.properties.workplace_type == 'Online' %}selected{% endif%}>Online</option>
-            <option value="On Site" {% if params.filter.properties.workplace_type == 'On Site' %}selected{% endif%}>On Site</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="filter-order-by" class="control-label">Order</label>
-          <select id="filter-order-by" name="order_by">
-            <option value="created_at desc">Newest</option>
-            <option value="created_at asc" {% if params.order_by == 'created_at asc' %}selected{% endif%}>Oldest</option>
-          </select>
-        </div>
-        <div class="form-action">
-          <button type="submit" class="btn btn-primary">Apply filter</button>
-        </div>
-      {% endform_for %}
-    </div>
+{% if is_client == "true" %}
+  <div class="sort-filter-search-wrapper">
+      <div class="sort-filter-a">
+        {% form_for :transactable, url: @form_url, method: 'get', form_for_type: 'dashboard' %}
+          <input type="hidden" name="status" value="{{ current_status }}">
+          <div class="form-group">
+            <label for="filter-properties-workplace" class="control-label">Workplace</label>
+            <select id="filter-properties-workplace" name="filter[properties][workplace_type]" data-allow-empty-option="true">
+              <option value="">Any</option>
+              <option value="Online" {% if params.filter.properties.workplace_type == 'Online' %}selected{% endif%}>Online</option>
+              <option value="On Site" {% if params.filter.properties.workplace_type == 'On Site' %}selected{% endif%}>On Site</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="filter-order-by" class="control-label">Order</label>
+            <select id="filter-order-by" name="order_by">
+              <option value="created_at desc">Newest</option>
+              <option value="created_at asc" {% if params.order_by == 'created_at asc' %}selected{% endif%}>Oldest</option>
+            </select>
+          </div>
+          <div class="form-action">
+            <button type="submit" class="btn btn-primary">Apply filter</button>
+          </div>
+        {% endform_for %}
+      </div>
 
-    {% if current_user.has_seller_profile? %}
-    <p class="find-expert-link"><a href="/search" class="btn btn-primary">Find an Expert</a></p>
-    {% endif %}
-</div>
+      {% if current_user.has_seller_profile? %}
+      <p class="find-expert-link"><a href="/search" class="btn btn-primary">Find an Expert</a></p>
+      {% endif %}
+  </div>
+{% endif %}
 
 {% assign filter_params = "&amp;filter[properties][workplace_type]=" | append: params.filter.properties.workplace_type | append: "&amp;order_by=" | append: params.order_by %}
 
