NM-5851 fix liquid view names

--- a/lib/tasks/uot/templates/mailers/order_item_mailer/notify_enquirer_approved_order_item.html.liquid
+++ b/lib/tasks/uot/templates/mailers/order_item_mailer/notify_enquirer_approved_order_item.html.liquid
@@ -1,3 +1,3 @@
-<h2>Hello, {{ lister.first_name }}</h2>
+<h2>Hello, {{ enquirer.first_name }}</h2>
 
-<p>{{ enquirer.name }} has approved the latest time and expense submission. The payment for all approved items will be processed on the next weekly billing cycle.</p>
+<p>{{ lister.name }} has approved the latest time and expense submission. The payment for all approved items will be processed on the next weekly billing cycle.</p>
