NM-XXX synchronising volte rake task with production

--- a/lib/tasks/volte/content_holders/body_bottom.liquid
+++ b/lib/tasks/volte/content_holders/body_bottom.liquid
@@ -14,5 +14,10 @@ position: body_bottom
   $('[data-show-field]').on('change', function(){ showCustomAttributes($(this))});
 
   $('[data-show-field]').each(function(){showCustomAttributes($(this));});
+
+  // Remove google maps API since its not used
+  $(function() {
+    return document.querySelectorAll('script[src*="maps.googleapis.com"]').forEach(function(v, i) { v.parentNode.removeChild(v) });
+  });
+
 </script>
-<!-- <script src="http://localhost:8000/js/volte.js" async></script> -->
