--- a/lib/tasks/volte/content_holders/head_bottom.liquid
+++ b/lib/tasks/volte/content_holders/head_bottom.liquid
@@ -9,3 +9,15 @@ position: head_bottom
 <!-- <link rel='stylesheet' media='screen' href='http://localhost:8000/css/style.css'> -->
 
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,400italic,600,700,700italic&amp;amp;subset=latin,latin-ext" rel="stylesheet" />
+
+<script type="text/javascript">
+$(document).ready(function() {
+  if($('[data-money-value-container]').length > 0) {
+    $('[data-money-value-container]').each(function(){
+      $(this).append("<div class='input-group'><div class='input-group-addon'>$</div></div>");
+      var symbol_container = $(this).find('.input-group-addon');
+      $(this).find('[data-money-value]').insertAfter(symbol_container);
+    })
+  }
+});
+</script>
