VOLTE New pages and changes

--- a/lib/tasks/volte/pages/about.liquid
+++ b/lib/tasks/volte/pages/about.liquid
@@ -4,8 +4,8 @@ name: About
 <div class="wrapper-a">
   <main>
     <header class="section-header">
-      <h2>About</h2>
-      <p>Everyone deserves their Cinderella moments.</p>
+      <h2>About us</h2>
+      <p>Everyone deserves their Cinderella moments</p>
     </header>
 
     <h3>Who we are</h3>
@@ -43,7 +43,7 @@ name: About
     </p>
     <p>
       <strong>Analytics:</strong> With every view and every click we are learning more about what our members are interested in and what they are doing in the online environment. The Volte aims to be responsive to customer needs and desires on both sides
-      of the rental market. Sophisticated Lenders can contact us about obtaining detailed analytic reports on their listings.
+      of the rental market. Sophisticated lenders can contact us about obtaining detailed analytic reports on their listings.
     </p>
   </main>
 </div>
