--- a/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
@@ -20,15 +20,10 @@
 
                     <li><a href="#" data-href="/users/sign_in" data-modal="true" data-modal-class="sign-up-modal" data-modal-overlay-close="disabled" url_options='{:return_to="/"}'>Log In</a></li>
                 {% else %}
-                    <li>
-                      <a href="/transactable_types/item/list">List your items</a>
-                    </li>
+                    {{ navigation_links | make_html_safe }}
                 {% endif %}
               </ul>
 
-              {% if current_user != blank %}
-                {{ navigation_links | html_safe }}
-            {% endif %}
             </nav>
         </div>
     </div>
