--- a/lib/tasks/volte/liquid_views/listings--show.liquid
+++ b/lib/tasks/volte/liquid_views/listings--show.liquid
@@ -1,26 +1,30 @@
-{% if listing.transactable_type.show_page_enabled? %}
-  {% assign photos = listing.photos %}
-{% else %}
-  {% assign photos = listing.location.photos_count %}
-{% endif %}
+{% assign photos = listing.photos %}
 {% assign photos_count = photos | size %}
 
 <div class="wrapper-a">
 
   <div class="item-top-bar">
     <div class="user-bar">
-      <div class="user-bar__photo" style="background-image: url('https://unsplash.it/200/200?image=0')">
+      <div class="user-bar__photo" style="background-image: url('{{ listing.creator.avatar_url_thumb }}')">
       </div>
 
       <div class="flex-container">
         <div class="user-bar__name">
-          <a href="#">User Name</a>
+          <a href="{{ listing.creator.user_profile_url }}">{% if listing.creator.properties.use_alias_as_name %}{{ listing.creator.user_alias }}{% else %}{{ listing.creator.name }}{% endif %}</a>
         </div>
         <div class="user-bar__action-bar">
           <ul>
-            <li><a href="#" class="button button-inverse">Message</a></li>
-            <li><a href="#" class="button button-inverse">Lender's Closet</a></li>
-            <li><a href="#" class="button button-inverse">Lender's Blog</a></li>
+            <li>
+              {% if listing.transactable_user_messages.size > 0 %}
+                <a class="button button-inverse"" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: listing.transactable_user_messages.first.id, skip: true }}">Message</a>
+              {% else %}
+                <a class="button button-inverse"" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: listing.id ,user_id: listing.creator.id, skip: true }}">Message</a>
+              {% endif %}
+            </li>
+            <li><a href="{{ listing.creator.user_profile_url }}" class="button button-inverse">Lender's Closet</a></li>
+            {% if listing.creator.has_active_blog? %}
+              <li><a href="{{ listing.creator.user_blog_posts_list_path }}" class="button button-inverse">Lender's Blog</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
@@ -28,14 +32,12 @@
 
     <div class="item-pricing">
       <dl>
-        <dt>4 days: </dt>
-        <dd>$1000 AUD</dd>
-        <dt>8 days: </dt>
-        <dd>$1500 AUD</dd>
-        <dt>30 days: </dt>
-        <dd>$3000 AUD</dd>
+        {% for price in listing.action_type.sorted_pricings %}
+          <dt>{{ price.number_of_units }} days: </dt>
+          <dd>${{ price.price.amount }} AUD</dd>
+        {% endfor %}
         <dt>Bond value: </dt>
-        <dd>$3000 AUD</dd>
+        <dd>${{ listing.properties.bond_value }} AUD</dd>
       </dl>
     </div>
   </div>
@@ -43,7 +45,7 @@
 
   <div class="item-content">
     <div class="item-name">
-      <h1>{%if listing.transactable_type.show_page_enabled? %}{{ listing.name | filter_text }}{%else%}{{ location.name | filter_text }}{%endif%}</h1>
+      <h1>{{ listing.name | filter_text }}</h1>
     </div>
 
     <div class="image-gallery" data-image-gallery>
@@ -77,7 +79,11 @@
       <ul>
         <li class="separated"><a href="#" class="button button-default">REQUEST ITEM</a></li>
         <li><a href="#" class="button button-default button-disabled">CHECK AVAILABILITY</a></li>
-        <li><a href="#" class="button button-default button-disabled">ADD AS FAVORITE</a></li>
+        <li>
+          <div data-add-favorite-button="true" data-path="{{ listing.wish_list_path }}" data-wishlistable-type="{{ listing.class_name }}" data-link-to-classes="button button-default" data-path-bulk="{{ listing.wish_list_bulk_path }}" data-object-id="{{ listing.id }}" id="favorite-button-{{ listing.class_name }}-{{ listing.id }}">
+            <div class="text-center"><img src="{{ 'components/modal/loader.gif' | image_url }}" /></div>
+          </div>
+        </li>
       </ul>
     </div> <!-- Item actions -->
 
@@ -92,15 +98,32 @@
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="tab-details">
-          <h3>Tralalal intro details</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.
-          </p>
+          <dt>Item:</dt> <dd>{{ listing.properties.item_type }}</dd>
+          {% if listing.properties.item_type == 'Dress' %}
+            <dt>Style:</dt> <dd>{{ listing.properties.item_style_dress }}</dd>
+            <dt>Size:</dt> <dd>{{ listing.properties.dress_size }}</dd>
+            <dt>Length:</dt> <dd>{{ listing.properties.dress_length }}</dd>
+          {% elsif listing.properties.item_type == 'Bag' %}
+            <dt>Style:</dt> <dd>{{ listing.properties.item_style_bag }}</dd>
+            <dt>Length:</dt> <dd>{{ listing.properties.dress_length }}</dd>
+          {% elsif listing.properties.item_type == 'Millinery' %}
+            <dt>Style:</dt> <dd>{{ listing.properties.item_style_milinery }}</dd>
+            <dt>Size:</dt> <dd>{{ listing.properties.milinery_size }}</dd>
+          {% elsif listing.properties.item_type == 'Outerwear' %}
+            <dt>Style:</dt> <dd>{{ listing.properties.item_style_outerwear}}</dd>
+            <dt>Size:</dt> <dd>{{ listing.properties.outerwear_size }}</dd>
+          {% elsif listing.properties.item_type == 'Accessories' %}
+            <dt>Style:</dt> <dd>{{ listing.properties.item_style_accessories }}</dd>
+          {% endif %}
+          <dt>Color:</dt> <dd>{{ listing.properties.color }}</dd>
+          <dt>Designer:</dt> <dd>{{ listing.properties.designer_name }}</dd>
+          <dt>Location:</dt> <dd>{{ listing.location.city }}, {{ listing.location.state }}</dd>
+          <dt>Retail Value:</dt>  <dd>{{ listing.properties.retail_value }}</dd>
+          <dt>Dry Cleaning:</dt>  <dd>{{ listing.properties.dry_cleaning }}</dd>
         </div>
         <div class="tab-pane" id="tab-description">
-          <h3>Tralalal intro description</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.
+            {{ listing.description }}
           </p>
         </div>
       </div>
@@ -110,11 +133,16 @@
   <div class="item-tags">
     <h4>Tags:</h4>
     <ul>
-      <li><a href="#" class="button button-inverse">Wedding</a></li>
-      <li><a href="#" class="button button-inverse">Like New</a></li>
-      <li><a href="#" class="button button-inverse">Black</a></li>
-      <li><a href="#" class="button button-inverse">Dress</a></li>
-      <li><a href="#" class="button button-inverse item-tags__view-more">view more</a></li>
+      {% for tag in listing.tags %}
+        {% if forloop.index < 5 %}
+          <li><a href="#" class="button button-inverse">{{ tag.name }}</a></li>
+        {% else %}
+          <li><a href="#" class="button button-inverse" style="display: none;">{{ tag.name }}</a></li>
+        {% endif %}
+        {% if forloop.index == 5 %}
+          <li><a href="#" class="button button-inverse item-tags__view-more">view more</a></li>
+        {% endif %}
+      {% endfor %}
     </ul>
   </div> <!-- Item tags -->
 
