NM-5859 liquid edit profile adjustments

--- a/app/views/instance_admin/theme/liquid_views/index.html.haml
+++ b/app/views/instance_admin/theme/liquid_views/index.html.haml
@@ -1,7 +1,7 @@
 .content-container
   .row
     .table-container.col-xs-12
-      %table.table
+      %table.table.table-striped
         %tbody
           %tr
             %th
@@ -33,7 +33,7 @@
     = t('instance_admin.liquid_views.customize_defaults')
   .row
     .table-container.col-xs-12
-      %table.table
+      %table.table.table-striped
         %tbody
           %tr
             %th
