--- a/app/views/registrations/_edit_options.html.liquid
+++ b/app/views/registrations/_edit_options.html.liquid
@@ -1,3 +1,3 @@
 <div class="options">
-  <a href="{{ current_user.user_profile_url }}">{{ 'dashboard.user_profile.view_profile_html' | t }}</a>
+  <a class='profile-link' href="{{ current_user.user_profile_url }}">{{ 'dashboard.user_profile.view_profile_html' | t }}</a>
 </div>
