NM-5850-bugfix-missing-enquirer-name
NM-5849 missing lister name

--- a/app/views/offer_mailer/notify_host_of_declined_payment.text.liquid
+++ b/app/views/offer_mailer/notify_host_of_declined_payment.text.liquid
@@ -1,6 +1,6 @@
 Hello, {{ lister.first_name }}!
 
-The payment for {{ listing.name }} {{ listing.listing_url }} has been declined by {{ reservation.owner.name }}. {% if reservation.has_rejection_reason %} They said:
+The payment for {{ listing.name }} {{ listing.listing_url }} has been declined by {{ enquirer.name }}. {% if reservation.has_rejection_reason %} They said:
 
 {{ reservation.rejection_reason }}{% endif %}
 
