--- a/app/views/offer_mailer/notify_host_of_approved_payment.html.liquid
+++ b/app/views/offer_mailer/notify_host_of_approved_payment.html.liquid
@@ -1,6 +1,6 @@
 <h2>Hello, {{ lister.first_name }}!</h2>
 
-<p>The payment has been approved by {{ reservation.owner.name }}.</p>
+<p>The payment has been approved by {{ enquirer.name }}.</p>
 
 <p><a class="btn" href="{{ reservation.host_show_url }}">Summary</a></p>
 
