--- a/app/views/offer_mailer/notify_host_of_approved_payment.text.liquid
+++ b/app/views/offer_mailer/notify_host_of_approved_payment.text.liquid
@@ -1,3 +1,3 @@
 Hello, {{ lister.first_name }}!
 
-The payment for {{ listing.name }} {{ listing.listing_url }} has been approved by {{ reservation.owner.name }}.
+The payment for {{ listing.name }} {{ listing.listing_url }} has been approved by {{ enquirer.name }}.
