--- a/app/views/offer_mailer/notify_host_of_declined_payment.html.liquid
+++ b/app/views/offer_mailer/notify_host_of_declined_payment.html.liquid
@@ -1,7 +1,7 @@
 <h2>Hello, {{ lister.first_name }}!</h2>
 
 <p>
-The payment has been declined by {{ reservation.owner.name }}. {% if reservation.has_rejection_reason %} They said:
+The payment has been declined by {{ enquirer.name }}. {% if reservation.has_rejection_reason %} They said:
 {{ reservation.rejection_reason }}{% endif %}
 </p>
 
