--- a/app/views/offer_mailer/notify_host_of_rejection.text.liquid
+++ b/app/views/offer_mailer/notify_host_of_rejection.text.liquid
@@ -1,6 +1,6 @@
 Can we help, {{ lister.first_name }}?
 
-We noticed that you declined {{ reservation.owner.first_name }}'s booking for '{{ listing.name }}'.
+We noticed that you declined {{ enquirer.first_name }}'s booking for '{{ listing.name }}'.
 
 We'd love to know the reasons so we can provide a better service in the future for you and your potential {{ listing.lessees }}.
 
