--- a/app/views/offer_mailer/notify_host_without_confirmation.text.liquid
+++ b/app/views/offer_mailer/notify_host_without_confirmation.text.liquid
@@ -2,7 +2,7 @@ Good news, {{ lister.first_name }}!
 
 Your listing, '{{ listing.name }}', was just booked!
 
-Who: {{ reservation.owner.first_name }}
+Who: {{ enquirer.first_name }}
 
 What: {{ listing.name }} x {{ reservation.quantity }}
 {% if reservation.guest_notes != blank %}
