--- a/lib/tasks/uot/templates/mailers/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
+++ b/lib/tasks/uot/templates/mailers/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
@@ -1,4 +1,4 @@
-<h1>Congratulations, {{ user.first_name }}</h1>
+<h1>Congratulations, {{ enquirer.first_name }}</h1>
 
 <p>
 You have been invited to a project by {{ lister.name }}. You will now have the ability to review the project details and contact the client for any questions or follow-up. If you are interested in the project, you can make an offer at anytime. If you are not interested you may kindly reject the offer as well.
